# stm32-blink-example-in-rust-baremetal

./: Cargo.toml  README.md  memory.x
.cargo/: config.toml
src/: main.rs
