[package]
name = "stm32-blink-example-in-rust-baremetal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[profile.release]
debug = 1 # default is `false`; using `true` is also OK as symbols reside on the host, not the target